--- a/_posts/2018-05-10-推荐神魔布袋戏.md
+++ b/_posts/2018-05-10-推荐神魔布袋戏.md
@@ -30,9 +30,7 @@ category: 布袋戏
 
 ​	这个开头当然并不能吸引大部分的观众，应该说明的是这是整个神魔发生时的背景故事，但是故事本身一直延伸到了上古魔界时期。白龙嗜血的故事为神魔开了一个头，同时也和后面的剧集有千丝万缕的联系，但不能算是主要的故事。这里不是神魔的剧评文章，因此不过多剧透。我们只需要了解神魔的世界观是二元对立的，即“神”与“魔”，但是其故事却不是：神魔是偏向武侠的江湖故事，充满了江湖人的恩恩怨怨、情意与仇恨。这里的每一件故事，讲述都是“情”的羁绊和无奈，尽管每一位江湖人的身份各不相同，却都逃不过情感的束缚，走向必然的命运。整个三部曲甚至有不少对“情感”的明确强调，其中就包括第二部的绝好的名称：情海魔涛。
 
-​	神魔的每一位角色（也许除得道尊者），都被裹挟在这情海魔涛之中，一方面是神秘高深的魔族带来的威胁，但更甚之的还是“情感”带来的无尽烦恼与悲剧。人身处社会之中，即使不入江湖，也免不了与人的联系，剪不断种种藕断丝连的情愫；无论修行高低深浅，也会委身于欲望与本性，导向无可避免的命运。神魔的每一位人物身上都能见到这个最大的线索，但最明显、着墨最多的就是当家主角道海逍遥・学千秋：（剧透）作为上古魔界的头号魔头，厌倦了世俗争斗，因无敌手而感到寂寞，投入昆仑门下学习五华圣气压制魔气，试图从头开始做一个普通人——他起名“学千秋”，表明自己总是在不断地学习正常人的情感和行为。然而他归于平凡的愿望却被昆仑上代的恩怨所破坏，甚至自己成为昆仑掌教，到后来领导正道，全都是魔界的人刻意算计。从他进入昆仑的一刻起，就被卷入了神魔争斗之中，担负起平凡人所有的七情六欲。甚至于在他归于平凡之前无意赠送的一本《多情剑谱》，引发了后来江湖的一场腥风血雨，为自己招来一波波的事端。让我们来看一看学千秋施展著名的多情剑法，注意他的念白：
-
-> （视频）
+​	神魔的每一位角色（也许除得道尊者），都被裹挟在这情海魔涛之中，一方面是神秘高深的魔族带来的威胁，但更甚之的还是“情感”带来的无尽烦恼与悲剧。人身处社会之中，即使不入江湖，也免不了与人的联系，剪不断种种藕断丝连的情愫；无论修行高低深浅，也会委身于欲望与本性，导向无可避免的命运。神魔的每一位人物身上都能见到这个最大的线索，但最明显、着墨最多的就是当家主角道海逍遥・学千秋：（剧透）作为上古魔界的头号魔头，厌倦了世俗争斗，因无敌手而感到寂寞，投入昆仑门下学习五华圣气压制魔气，试图从头开始做一个普通人——他起名“学千秋”，表明自己总是在不断地学习正常人的情感和行为。然而他归于平凡的愿望却被昆仑上代的恩怨所破坏，甚至自己成为昆仑掌教，到后来领导正道，全都是魔界的人刻意算计。从他进入昆仑的一刻起，就被卷入了神魔争斗之中，担负起平凡人所有的七情六欲。甚至于在他归于平凡之前无意赠送的一本《多情剑谱》，引发了后来江湖的一场腥风血雨，为自己招来一波波的事端。让我们来看一看学千秋施展著名的多情剑法，注意他的念白。
 
 ​	学千秋的诗号一开始是“道海无边尽，逍遥学千秋”，表现出逍遥隐逸的世外高人形象，到他越陷越深之时，诗号则变成了“世事尘埃烦不了，一生悟道学逍遥。逃名隐性难回避，只愿苍天把人饶。”。学千秋的智慧与武功不是他作为男主角吸引人的地方，他也不需要一个女角色来丰富自己的故事，他在无穷无尽的情海魔涛之中的挣扎构成了他最大的魅力。在所有布袋戏主角之中，很少有人表现出如此明显的缺点——一个重情重义的完美主义者，带着巨大的历史包袱，这就是神魔的当家一哥学千秋。
 
@@ -44,4 +42,4 @@ category: 布袋戏
 
 ### 千锤万凿：神魔的呈现本位
 
-​	神魔是呈现本位的：就像新金光是剧情本位，而霹雳是“颜值”本位一样，这代表了一个系列的重心。神魔即使放在今天仍然属于上乘，原因在于拍摄者对品质的追求，我们有理由相信，神魔经过详尽的计划，不断地打磨。在一个发行了三部的电视布袋戏系列里，居然没有明显的破格，三年间几乎没有周边产品、线下活动。萧建平先生显然考虑的不是经济利益（霹雳崛起后拍摄电视布袋戏几乎是注定赔钱的），而是真正的把剧集做得尽善尽美。我们在神魔之中看见太多对观众的人文关怀：有名有姓的角色，不分一线二线三线，即使是一个龙套角色都有自己的性格、独特的口音；每一场打斗都不会被莫名打断，对阵的双方即使实力差距极大，也很少出现“秒杀”的现象。你能看到一个上古大魔王和一个喽啰打得有来有回，但你不会觉得大魔王很弱，好像所有神魔的角色都有自己的底牌和原则，武戏成为表现其特性的一种方式。我们说神魔是呈现本位的，是考虑了神魔最终`呈现`给观众的影音效果是不可分割的：神魔的偶的造型、配乐、口白甚至剧情，都不能被简单地分离。不单一的追求剧情，走向流智的死循环；也不追求偶型的优美，忽略与世界构架是否契合，完美地遵守了奥卡姆剃刀原则。我们认为神魔布袋戏是目前所能见，简洁而不简单，平凡中显现非凡的系列，适合有一定基础、希望单纯欣赏布袋戏表演艺术的戏迷观看。
+​	神魔是呈现本位的：就像新金光是剧情本位，而霹雳是市场本位一样，这代表了一个系列的重心。神魔即使放在今天仍然属于上乘，原因在于拍摄者对品质的追求，我们有理由相信，神魔经过详尽的计划，不断地打磨。在一个发行了三部的电视布袋戏系列里，居然没有明显的破格，三年间几乎没有周边产品、线下活动。萧建平先生显然考虑的不是经济利益（霹雳崛起后拍摄电视布袋戏几乎是注定赔钱的），而是真正的把剧集做得尽善尽美。我们在神魔之中看见太多对观众的人文关怀：有名有姓的角色，不分一线二线三线，即使是一个龙套角色都有自己的性格、独特的口音；每一场打斗都不会被莫名打断，对阵的双方即使实力差距极大，也很少出现“秒杀”的现象。你能看到一个上古大魔王和一个喽啰打得有来有回，但你不会觉得大魔王很弱，好像所有神魔的角色都有自己的底牌和原则，武戏成为表现其特性的一种方式。我们说神魔是呈现本位的，是考虑了神魔最终`呈现`给观众的影音效果是不可分割的：神魔的偶的造型、配乐、口白甚至剧情，都不能被简单地分离。不单一的追求剧情，走向流智的死循环；也不追求偶型的优美，忽略与世界构架是否契合，完美地遵守了奥卡姆剃刀原则。我们认为神魔布袋戏是目前所能见，简洁而不简单，平凡中显现非凡的系列，适合有一定基础、希望单纯欣赏布袋戏表演艺术的戏迷观看。
