--- a/_posts/2018-05-17-zsh崩溃记.md
+++ b/_posts/2018-05-17-zsh崩溃记.md
@@ -12,3 +12,10 @@ category: zsh linux
 最终还是登上图形界面用商店装了konsole才发现zsh崩溃的问题 赶紧手动进入bash 切换到root后chsh
 
 我觉得用linux还是平实一点比较好……谨记一次教训于此
+
+补充：解决卸载zsh后vim和gdb等程序仍然使用zsh的问题：在bashrc中加入
+
+```sh
+export SHELL="/bin/bash"
+```
+
