--- a/_posts/2018-05-10-推荐神魔布袋戏.md
+++ b/_posts/2018-05-10-推荐神魔布袋戏.md
@@ -6,6 +6,14 @@ tag: 布袋戏 神魔布袋戏
 category: 布袋戏
 ---
 
+|剧集名称|发行时间|总集数|
+|-------|------|-----|
+|神魔英雄传之血魔劫|2003年8月|44|
+|神魔英雄传之情海魔涛|2004年8月|48|
+|神魔英雄传之魔纪天下|2005年10月|30|
+|神魔英雄传之魔云战韬|2017年8月|连载中|
+
+
 > ​	写作论文期间，阅读了不少布袋戏相关著作，但提及萧建平的少之又少，更遑论专文介绍，一位不论是外台或电视布袋戏皆曾叱吒风云，又受同业推崇担任两届台湾省地方戏剧协进会理事长的艺师，竟未受到重视，颇令人讶异。我期望透过对萧建平电视布袋戏表演艺术的研究，能让布袋戏专家、学者注意到这位实力超群又备受同业拥戴的艺师，也期盼对布袋戏有兴趣的研究者，能多报导、探究自己家乡的布袋戏艺师，使更多人认识并了解他们对台湾布袋戏的付出与贡献，甚至欣赏他们的表演艺术之美
 >
 > （林一芃《萧建平电视布袋戏的表演艺术研究——以〈神魔英雄传〉三部曲为例》，D，2016，P3）
@@ -24,19 +32,19 @@ category: 布袋戏
 
 ## 一往深情：神魔架构下的“情海魔涛”
 
-​	在许多的连续发行的布袋戏剧集里，似乎总能为故事归纳出一个“核心”，或者可以说是最大的特点——好比“时空”之于天宇，“循环”之于霹雳，“信仰”之于新金光——对于神魔来说，这个词是“情感”：是戏内人物最真实的情感，也是创作者对观众的温情考虑。
+​	在许多的连续发行的布袋戏剧集里，似乎总能为故事归纳出一个“核心”，或者可以说是最大的特点——好比“时空”之于天宇，“循环”之于霹雳，“信仰”之于新金光——对于神魔来说，这个词是**“情感”**：是戏内人物最真实的情感，也是创作者对观众的温情考虑。
 
 ​	让我们此时真正地介绍神魔的背景故事：轩辕黄帝与蚩尤争战，最终留下白龙神剑与嗜血魔剑，定下白龙嗜血相争的命数，千百年来白龙与嗜血传人定期争斗引发世界动乱。然而神魔故事发生前，原定最近一次的相争却没有出现，直到学千秋与傀修罗争战意外释放潜藏的剑灵，也预示着新的祸劫将起……
 
 ​	这个开头当然并不能吸引大部分的观众，应该说明的是这是整个神魔发生时的背景故事，但是故事本身一直延伸到了上古魔界时期。白龙嗜血的故事为神魔开了一个头，同时也和后面的剧集有千丝万缕的联系，但不能算是主要的故事。这里不是神魔的剧评文章，因此不过多剧透。我们只需要了解神魔的世界观是二元对立的，即“神”与“魔”，但是其故事却不是：神魔是偏向武侠的江湖故事，充满了江湖人的恩恩怨怨、情意与仇恨。这里的每一件故事，讲述都是“情”的羁绊和无奈，尽管每一位江湖人的身份各不相同，却都逃不过情感的束缚，走向必然的命运。整个三部曲甚至有不少对“情感”的明确强调，其中就包括第二部的绝好的名称：情海魔涛。
 
-​	神魔的每一位角色（也许除得道尊者），都被裹挟在这情海魔涛之中，一方面是神秘高深的魔族带来的威胁，但更甚之的还是“情感”带来的无尽烦恼与悲剧。人身处社会之中，即使不入江湖，也免不了与人的联系，剪不断种种藕断丝连的情愫；无论修行高低深浅，也会委身于欲望与本性，导向无可避免的命运。神魔的每一位人物身上都能见到这个最大的线索，但最明显、着墨最多的就是当家主角道海逍遥・学千秋：（剧透）作为上古魔界的头号魔头，厌倦了世俗争斗，因无敌手而感到寂寞，投入昆仑门下学习五华圣气压制魔气，试图从头开始做一个普通人——他起名“学千秋”，表明自己总是在不断地学习正常人的情感和行为。然而他归于平凡的愿望却被昆仑上代的恩怨所破坏，甚至自己成为昆仑掌教，到后来领导正道，全都是魔界的人刻意算计。从他进入昆仑的一刻起，就被卷入了神魔争斗之中，担负起平凡人所有的七情六欲。甚至于在他归于平凡之前无意赠送的一本《多情剑谱》，引发了后来江湖的一场腥风血雨，为自己招来一波波的事端。让我们来看一看学千秋施展著名的多情剑法，注意他的念白。
+​	神魔的每一位角色（也许除得道尊者），都被裹挟在这情海魔涛之中，一方面是神秘高深的魔族带来的威胁，但更甚之的还是“情感”带来的无尽烦恼与悲剧。人身处社会之中，即使不入江湖，也免不了与人的联系，剪不断种种藕断丝连的情愫；无论修行高低深浅，也会委身于欲望与本性，导向无可避免的命运。神魔的每一位人物身上都能见到这个最大的线索，但最明显、着墨最多的就是当家主角道海逍遥・学千秋：（剧透）作为上古魔界的头号魔头，厌倦了世俗争斗，因无敌手而感到寂寞，投入昆仑门下学习五华圣气压制魔气，试图从头开始做一个普通人——他起名“学千秋”，表明自己总是在不断地学习正常人的情感和行为。然而他归于平凡的愿望却被昆仑上代的恩怨所破坏，甚至自己成为昆仑掌教，到后来领导正道，全都是魔界的人刻意算计。从他进入昆仑的一刻起，就被卷入了神魔争斗之中，担负起平凡人所有的七情六欲。甚至于在他归于平凡之前无意赠送的一本《多情剑谱》，引发了后来江湖的一场腥风血雨，为自己招来一波波的事端。
 
 ​	学千秋的诗号一开始是“道海无边尽，逍遥学千秋”，表现出逍遥隐逸的世外高人形象，到他越陷越深之时，诗号则变成了“世事尘埃烦不了，一生悟道学逍遥。逃名隐性难回避，只愿苍天把人饶。”。学千秋的智慧与武功不是他作为男主角吸引人的地方，他也不需要一个女角色来丰富自己的故事，他在无穷无尽的情海魔涛之中的挣扎构成了他最大的魅力。在所有布袋戏主角之中，很少有人表现出如此明显的缺点——一个重情重义的完美主义者，带着巨大的历史包袱，这就是神魔的当家一哥学千秋。
 
 ​	其实仔细观察就发现，神魔世界中的角色基本都对“情感”的牵绊很了解，却陷入其中难以自拔。神魔前期最精彩的一场智斗就是将人的“情”作为筹码进行的一次曲折的博弈：祆冥利用学千秋对断痕之情设计神魔之剑互击，达到一石三鸟的目的：引出道罪、释放魔尊、刺探学千秋的隐藏身份，同时故意引诱学千秋的师兄入魔以钳制前者，乃至于引出无上师与风静海，最终达到释放侠魔玉箫郎的目的；而长眉尊者却利用学千秋与傀修罗的心结故意引发新一轮神魔之争，又故意造成了正邪双方的对立；五皮郎中利用学千秋护犊的感情结束持续千年的神魔争斗，顺机引出任飘踪参与江湖之事。神魔将情感的作用放得很大，在神魔故事中，一名角色的死亡通常不是因为技不如人或是智力欠缺，而是“情感”驱使着他们选择了死亡。
 
-​	让我们来观看神魔重启后的魔纪天下30集，风静海亡于殷一笑的武戏。莫名梦觉・风静海乃昆仑上一代的传人，与无上师有着杀师、夺爱之恨。最终他如预期一般杀掉无上师解恨，但是浮现在他脑海中的却是恋人素素与无上师厮守在黄泉的画面。风静海故意不去治疗学千秋造成的伤势，因为在感情上的失败、报仇后的空虚感迫使着他放弃苟延残喘的生命——单论武力，双刀四剑可能敌不过拥有旋流风体的风静海，但后者的一心求死，最终还是导向了悲剧。
+​	以神魔重启后的魔纪天下30集，风静海亡于殷一笑的武戏为例。莫名梦觉・风静海乃昆仑上一代的传人，与无上师有着杀师、夺爱之恨。最终他如预期一般杀掉无上师解恨，但是浮现在他脑海中的却是恋人素素与无上师厮守在黄泉的画面。风静海故意不去治疗学千秋造成的伤势，因为在感情上的失败、报仇后的空虚感迫使着他放弃苟延残喘的生命——单论武力，双刀四剑可能敌不过拥有旋流风体的风静海，但后者的一心求死，最终还是导向了悲剧。
 
 ​	这就是感情在神魔故事中的决定性作用，如果要观看神魔三部曲，一定要切记此点。值得一提的是，神魔的感情不仅是重要的，也是广泛的：我们将在下面讨论神魔整体对观众抱持的一种温情
 
