--- a/_posts/2018-01-01-test.md
+++ b/_posts/2018-01-01-test.md
@@ -2,5 +2,6 @@
 title: test
 layout: post
 date: 2018-01-01
+excerpt: it's a test excerpt,I hope it shows up
 ---
 $$ \int_0^{\pi} \sin x \,\mathrm{d}x = -\cos x \,\bigg| ^{\pi}_{0} = 2 $$
