--- a/_posts/2018-07-01-About-Me.md
+++ b/_posts/2018-07-01-About-Me.md
@@ -2,7 +2,10 @@
 title: 关于我
 layout: post
 date: 2018-07-01
-tags: 关于我 about-me
+tags: 
+    - 关于我 
+    - About Me
+permalink: /AboutMe
 excerpt: 关于我
 ---
  我是一名在读大学生，目前就读于清华大学计算机系。这个博客当然主要是我的一些学习心得，但显而易见，我并不是一个把写代码作为第二天性的人。我对那些精妙的编程技巧感到很有兴趣，但那不是我生命的全部，我热爱开源社区，崇尚相互交流，但有时我也不愿意做馈赠者——__我不是geek，也不是nerd__，但我努力探索一切的解决方案。
