--- a/changelog
+++ b/changelog
@@ -1,7 +1,13 @@
 # note
 All notable changes to this project will be documented in this file.
 
-## Alpha
+# Alpha
+
+## [v2] - 2018-07-13
+###Added
+- 增加自定义域名
+- 增加简单的404页面
+- 添加镜像站
 
 ## [v1] - 2018-07-12
 ### Added
